frontend bug fix (homeVis,refVis linking issue from overalls, homeVis display overlap), added template for variant filters

--- a/mango-cli/src/main/webapp/stylesheets/main.scss
+++ b/mango-cli/src/main/webapp/stylesheets/main.scss
@@ -92,6 +92,11 @@ div.tooltip {
     }
 }
 
+.transEff{
+  border-radius:5px;
+  opacity:0.7;
+  background-color:white;
+}
 input[type="text"] {
     height: 22px;
     padding: 4px 12px;
